--- a/_data/home.yml
+++ b/_data/home.yml
@@ -38,7 +38,7 @@ features:
     alt-text: Stroke path comparisons
     image-detail: Here is one example of how wefigured out how to make an adjustment. We found that our athlete was pulling too far back with their stroke in comparison to the elite stroke on the far right. With an earlier exit to his pull, our athlete dropped his average push 25 freestyle pace from 10.4 to 10.1 seconds. His experience follows...
   transition:
-    image: img/wave_page_break.png
+    image: img/wave_break_image.png
     alt-text: Wave transition
     
 # Save time and energy with a new perspective by finding opportunities or issues easier and focusing on hidden details.
