--- a/_data/home.yml
+++ b/_data/home.yml
@@ -5,7 +5,7 @@ intro:
   description: Our wearable sensors capture and process stroke motions to reveal the finer details of your swimming technique.
   image: img/hero.png
   alt-text: Freestyle swim with sensor
-  cta-text: We are currently demoing and providing lessons with our sensors. Provide us with your email and we will let you know of our product updates, preorder availability, and local demos.
+  cta-text: We are currently demoing and providing lessons with our sensors. Provide us with your email and we will keep you informed of our product updates, preorder availability, and local demos.
   btn: Stay Informed
   btn2: Learn More
 
@@ -13,7 +13,8 @@ features:
   one:
     heading: 
       - See where you can improve
-    subheading: Our sensors can map your entire stroke including the underwater motions. Collecting data during the swim, our sensors transfer your performance over to the Strokespek app via Bluetooth to provide instant results.
+    subheading: Our sensors collect data while you swim and then transfer your performance to the Strokespek app to generate visual results. They are light and located strategically to capture a clean stroke without affectng your feel for the water.
+    Each stroke is unique but our data visuals reveal the hidden patterns within path variations and the timing of rotations and arm speed throughtout the stroke cycle. Notice the differences of successive left arm freestyle strokes in the image.
     image: img/valueprop.png
     alt-text: Overhead shot of sensor on swimmer
     subimage: img/devices_morphwear.png
@@ -28,15 +29,16 @@ features:
       - subheading: Stroke Speed Progression
         image: img/speed_progressions.png
         alt-text: Stroke speed progressions
-    description: For the first time, we can take a look at all of your stroke positions and progressions at once, revealing the stroke path variations along with their arm speed and rotation.
+    description: For the first time we can map your entire stroke cycle including what is happening underwater. The strategic arrangements, highlights, and overlays enable us to analyze all stroke positions and progressions at once. Click on the following charts for a closer look and more details on what each chart can reveal.
     
   three:
     heading: Compare For Yourself. See What Works Best.
-    text: Changing your feel for the water for a new technique can be tricky but now you can compare your stroke feel and adjustments to past performance and elite performers. It's easy to spot the differences and recognize which feelings connect with the right motions. So you no longer have to guess the about the progress.
+    text: Changing your tehnique or developing a new feel for the water can be tricky and is pretty much a guessing game. But now you can compare your stroke feel and adjustments to past performance and elite performers. It's easy to spot the differences and recognize which feelings connect with the right motions so you no longer have to guess how much progress you've made.
     text-next: At Morphwear we continue to collect stroke data to build out our library across a range of swimmer experience to provide suitable targets for different levels. There is no perfect technique but there are distinctive elite charactersitics to work up to.
     image: img/strokepath_comparison.png
     alt-text: Stroke path comparisons
-    image-detail: Here is one example of how wefigured out how to make an adjustment. We found that our athlete was pulling too far back with their stroke in comparison to the elite stroke on the far right. With an earlier exit to his pull, our athlete dropped his average push 25 freestyle pace from 10.4 to 10.1 seconds. His experience follows...
+    image-detail: Here is one example of how we made an adjustment for an experienced swimmer that was already holding a pace of 10.4 seconds on his 25s freestyle from a push. In the above image we found that in his original stroke on the left in blue he was pulling too far back in comparison to the elite stroke on the far right in yellow. By identifying an adjustment to make his arm exit sooner from the pull phase, the athlete's average instantly dropped down to a new pace of 10.1 seconds.
+    His experience follows...
   transition:
     image: img/wave_break_image.png
     alt-text: Wave transition
@@ -53,14 +55,17 @@ testimonial:
   image: img/testimonial.png
   alt-text: Leif Kluver
 
+big-cta:
+  heading: One thing we've learned from our research when talking to swimmers and coaches is that feeling faster than last time is simply not enough. It used to be a part of the sport that we had to accept but now there is an option. 
+  cta: Find out how you can start swimming faster and training smarter by joining our emai list.
+
 about:
   heading: Insights for the next generation
   image: img/about.png
   body: 
-    - My name is Konrad Antoniuk. I have competed at Olympic Trials and currently building a business and product that I believe would have helped me reach my full potnetial in my early years of training.
-    - Morphwear's mission is to enable the next generational leap in athletic performance with smarter training. Our products focus on providing athletes a measured approach toward achieving their goals.
-    - Beginning with competitive swimming, we are debuting our motion analysis algorithms in a sport where mechanical efficiency is critical and objective feedback is hard to come by. I understand the the commitment and skill required to compete at a high level.
-    - To ensure and prove the data's efficacy I am using the technology firsthand to assist myself in qualifying for the Olympic Trials. In addition, I have experinced siginificant success in using the technology on others, I feel it's time to make it available for others on their journey.
+    - My name is Konrad Antoniuk, the product architect behind Strokespek. I have previously competed at the 2012 Olympic Trials and currently focused on building a business and product that I believe would have immensely helped me early in my swimming career.
+    - Morphwear's mission is to enable the next generational leap in athletic performance through smarter training. Our products focus on providing athletes a measured approach toward achieving their goals. Beginning with competitive swimming, we are debuting our motion analysis algorithms in a sport where mechanical efficiency is critical and objective feedback is hard to come by. 
+    - I understand the commitment and sacrifices required to compete at a high level and I want to ensure that I have built something that can reliably help others that have put their heart into training. To prove the data's efficacy, I am using the technology firsthand to requalify for the 2021 Olympic Trials. In addition, I have experienced siginificant success in using the technology on many athletes and at this point I feel it's time to make it available for others on their journey.
   text:
     columnA:
       - "Morphwear’s mission is to enable the next generational leap in athletic performance with smarter training. Our products focus on providing athletes a measured approach toward achieving their goals."
