--- a/_data/home.yml
+++ b/_data/home.yml
@@ -49,7 +49,7 @@ testimonial:
   credentials: 
     - "D2 All American"
     - "1:36.08 200 Free"
-  text: “Great product. Absolutely recommend giving it a try! I was able to drop about .3 seconds on average per 25 on a set of 6x25 after reviewing initial measurements of the same set and implementing suggestions on how to change me stroke slightly.”
+  text: “Easy to understand the technology with explanation, and in my case the changes were easy to implement and improvements showed immediately. The sensors are small enough to not change the stroke or disturb in any way, they just need to fit correctly and be tight enough to not slip off.”
   image: img/testimonial.png
   alt-text: Leif Kluver
 
