--- a/_data/home.yml
+++ b/_data/home.yml
@@ -63,7 +63,7 @@ about:
   body: 
     - Morphwear's mission is to enable the next generational leap in athletic performance through smarter training. Our products focus on providing athletes a measured approach toward achieving their goals. Beginning with competitive swimming, we are debuting our motion analysis algorithms in a sport where mechanical efficiency is critical and objective feedback is hard to come by.
     - My name is Konrad Antoniuk, the product architect behind Strokespek. I have previously competed at the 2012 Olympic Trials and currently focused on building a business and product that I believe would have immensely helped me early in my swimming career.
-    - I understand the commitment and sacrifices required to compete at a high level and I want to ensure that I have built something that can reliably help others that have put their heart into training. To prove the data's efficacy, I am using the technology firsthand to requalify for the 2021 Olympic Trials. In addition, I have experienced siginificant success in using the technology on many athletes and at this point I feel it's time to make it available for more swimmers on their journey.
+    - I understand the commitment and sacrifices required to compete at a high level and I want to ensure that I have built something that can reliably help others that put their heart into training. To prove the data's efficacy, I am using the technology firsthand to requalify for the 2021 Olympic Trials. In addition, I have experienced siginificant success in using the technology on many athletes and at this point I feel it's time to make it available for more swimmers on their journey.
   alt-text: Water burst
       
 # footer:
