--- a/_data/home.yml
+++ b/_data/home.yml
@@ -55,7 +55,7 @@ testimonial:
 
 cta-section:
   heading: One thing we've learned from our research when talking to swimmers and coaches is that feeling faster than last time is simply not enough. It used to be a part of the sport that we had to accept but now there is an option. 
-  cta: Find out how you can start swimming faster and training smarter by joining our emai list.
+  cta: Find out how you can start swimming faster and training smarter by joining our email list.
   image: img/morphwear_gear.jpg
   alt-text: Morphwear swim gear
 
