--- a/_data/default.yml
+++ b/_data/default.yml
@@ -27,7 +27,7 @@ quicklinks:
   - title: Privacy Policy
     url: '#'
   - title: Terms of Use
-    url: legal/terms_of_use/
+    url: terms_of_use.html
   - title: Sitemap
     url: '#'
 
